modified:   src/index.html   - fix layout issues
  - will add layout for daily forecast

modified:   src/index.js
  - add search functionality
  - calls api for common weather data

  - will add daily forecast
  - wil add hourly forecast

modified:   src/style.css
  - using PicoCSS for design (sorry I'm not into styling)
  - basic styling
  - no changes

--- a/index.html
+++ b/index.html
@@ -29,13 +29,19 @@
     </article>
     <main class="container">
       <div id="dataContainer">
-        <p id="location">London, UK</p>
-        <h1 id="temperature">31℃</h1>
-        <p>Partly cloudy</p>
-        <p>Hi: 31 Lo: 27</p>
+        <p id="location"></p>
+        <h1 id="temperature"></h1>
+        <p id="condition"></p>
+        <p id="minmax"></p>
       </div>
-      <div>
-      </div>
+      <!--       <div id="dayForecast">
+        <div class="grid">
+          <p>1</p>
+          <p>1</p>
+          <p>1</p>
+          <p>1</p>
+        </div>
+      </div> -->
     </main>
   </body>
 </html>
