New: 7 day forecast with high and low temperature
modified:   public/index.html
modified:   src/index.html
  - Minor changes. The table is dynamically created using JS

modified:   public/main.js
modified:   src/index.js
  - Update the value for forecastDays to fetch forecast data from
    WeatherAPI, 7 day forecast
  - Create table dynamically and show proper data for each day
    of the week with high and low temperature
  - Remove existing data before appending the newly fetched data from
    the API

modified:   src/style.css
  - Add minimal syling to the page

there's so much to learn. i'm getting there

--- a/index.html
+++ b/index.html
@@ -38,22 +38,13 @@
         <p id="condition"></p>
         <p id="minmax"></p>
       </div>
-      <div>
-        <figure class="grid" id="dayForecast">
-          <table>
-            <tr>
-              <th>Column 1</th>
-              <th>Column 2</th>
-              <th>Column 3</th>
-            </tr>
-            <tr>
-              <td>Data 1</td>
-              <td>Data 2</td>
-              <td>Data 3</td>
-            </tr>
-          </table>
-        </figure>
-      </div>
+      <figure id="dayForecast">
+        <table>
+          <!-- <caption>7-day forecast</caption> -->
+          <tbody>
+          </tbody>
+        </table>
+      </figure>
     </main>
   </body>
 </html>
