--- a/public/index.html
+++ b/public/index.html
@@ -38,22 +38,13 @@
         <p id="condition"></p>
         <p id="minmax"></p>
       </div>
-      <div>
-        <figure class="grid" id="dayForecast">
-          <table>
-            <tr>
-              <th>Column 1</th>
-              <th>Column 2</th>
-              <th>Column 3</th>
-            </tr>
-            <tr>
-              <td>Data 1</td>
-              <td>Data 2</td>
-              <td>Data 3</td>
-            </tr>
-          </table>
-        </figure>
-      </div>
+      <figure id="dayForecast">
+        <table>
+          <!-- <caption>7-day forecast</caption> -->
+          <tbody>
+          </tbody>
+        </table>
+      </figure>
     </main>
   </body>
 </html>
